# GravyLensing

./: .gitignore  CMakeLists.txt  README.md  python_example.py
backgrounds/: Euclid_s_extragalactic_view_in_Southern_Sky_patch.tif  README  euclid_with_grid_43.001.tiff  euclid_with_grid_43.002.tiff  euclid_with_grid_43.003.tiff  euclid_with_grid_43.004.tiff  euclid_with_grid_43.005.tiff  euclid_with_grid_43.006.tiff  euclid_with_grid_43.007.tiff  euclid_with_grid_43.008.tiff  euclid_with_grid_43.009.tiff  euclid_with_grid_43.010.tiff  euclid_with_grid_43.011.tiff  euclid_with_grid_43.012.tiff  euclid_with_grid_43.013.tiff  euclid_with_grid_43.014.tiff  euclid_with_grid_43.015.tiff  euclid_with_grid_43.016.tiff
models/: README  get_models.py  lraspp_torchscript-traced_float32_512_512.pt
src/: CMakeLists.txt  PersonSegmenter.hpp  PersonSegmenter.mm  PixelBufferUtils.cpp  PixelBufferUtils.hpp  VisionSegmentationWorker.cpp  VisionSegmentationWorker.hpp  backgrounds.cpp  backgrounds.hpp  cam_feed.cpp  cam_feed.hpp  cmd_parser.hpp  lens_mask.cpp  lens_mask.hpp  lensing_worker.cpp  lensing_worker.hpp  main.cpp  segmentation_worker.cpp  segmentation_worker.hpp  viewport.cpp  viewport.hpp
